# test_task

./: .env.template  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2024_10_25_1608-202cbcc36d4a_create_users_table.py  2024_10_25_1609-ba9f29384901_create_referral_code_table.py  2024_10_25_1610-2db4d19d4e1e_create_referrals_table.py
app/api_v1/: __init__.py  auth.py  codes.py  exceptions.py  referrals.py  users.py  utils.py
app/auth/: utils.py
app/cache/: redis.py
app/database/: __init__.py  base.py  crud.py  models.py
app/schemas/: codes.py  exceptions.py  referrals.py  responses.py  schemas.py
