[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Vladimir Litvinov <vladimirlitvinov123q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
uvicorn = "^0.32.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
bcrypt = "^4.2.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-multipart = "^0.0.12"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
